# WindowsShutDownWS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  config_example.txt  create_service_example.bat  main.go  shutdown.wxs
examples/: config_example.json  create_service_example.bat  genreate_self_cert.txt
shutdownDLL/: CMakeLists.txt  shutdownDLL.cpp
shutdownWS/: CMakeLists.txt  main.go
uefiscanner/: CMakeLists.txt  uefiscanner.cpp
wix/: shutdown.wxs
